tests-integration/tests/custom/error-01/stderr.expected
Error:
    model.eprime:1:7:
  |
1 | find x
  |       ^
Missing Domain

model.eprime:1:7:
  |
1 | find x
  |       ^
Missing :



Stack backtrace:
   0: std::backtrace_rs::backtrace::libunwind::trace
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/../../backtrace/src/backtrace/libunwind.rs:117:9
   1: std::backtrace_rs::backtrace::trace_unsynchronized
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/../../backtrace/src/backtrace/mod.rs:66:14
   2: std::backtrace::Backtrace::create
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/backtrace.rs:331:13
   3: std::backtrace::Backtrace::capture
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/backtrace.rs:296:9
   4: anyhow::kind::Adhoc::new
             at /Users/felixleitner/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/anyhow-1.0.100/src/backtrace.rs:27:14
   5: conjure_oxide::solve::parse
             at /Users/felixleitner/src/conjure-oxide/crates/conjure-cp-cli/src/solve.rs:180:9
   6: conjure_oxide::solve::run_solve_command
             at /Users/felixleitner/src/conjure-oxide/crates/conjure-cp-cli/src/solve.rs:64:17
   7: conjure_oxide::run_subcommand
             at /Users/felixleitner/src/conjure-oxide/crates/conjure-cp-cli/src/main.rs:154:44
   8: conjure_oxide::run
             at /Users/felixleitner/src/conjure-oxide/crates/conjure-cp-cli/src/main.rs:50:5
   9: conjure_oxide::main
             at /Users/felixleitner/src/conjure-oxide/crates/conjure-cp-cli/src/main.rs:29:11
  10: core::ops::function::FnOnce::call_once
             at /Users/felixleitner/.rustup/toolchains/1.91.1-x86_64-apple-darwin/lib/rustlib/src/rust/library/core/src/ops/function.rs:250:5
  11: std::sys::backtrace::__rust_begin_short_backtrace
             at /Users/felixleitner/.rustup/toolchains/1.91.1-x86_64-apple-darwin/lib/rustlib/src/rust/library/std/src/sys/backtrace.rs:158:18
  12: std::rt::lang_start::{{closure}}
             at /Users/felixleitner/.rustup/toolchains/1.91.1-x86_64-apple-darwin/lib/rustlib/src/rust/library/std/src/rt.rs:206:18
  13: core::ops::function::impls::<impl core::ops::function::FnOnce<A> for &F>::call_once
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/core/src/ops/function.rs:287:21
  14: std::panicking::catch_unwind::do_call
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/panicking.rs:590:40
  15: std::panicking::catch_unwind
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/panicking.rs:553:19
  16: std::panic::catch_unwind
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/panic.rs:359:14
  17: std::rt::lang_start_internal::{{closure}}
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/rt.rs:175:24
  18: std::panicking::catch_unwind::do_call
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/panicking.rs:590:40
  19: std::panicking::catch_unwind
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/panicking.rs:553:19
  20: std::panic::catch_unwind
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/panic.rs:359:14
  21: std::rt::lang_start_internal
             at /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/rt.rs:171:5
  22: std::rt::lang_start
             at /Users/felixleitner/.rustup/toolchains/1.91.1-x86_64-apple-darwin/lib/rustlib/src/rust/library/std/src/rt.rs:205:5
  23: _main
  24: <unknown>
